infrastructure/k8s/monitoring_v3/grafana/grafana.yaml
# apiVersion: v1
# kind: Secret
# metadata:
#   name: grafana
#   namespace: monitoring
#   labels:
#     app: grafana
# type: Opaque
# data:
#   DATABASE__PASSWORD: ""
#   SECRET_KEY: ""
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0  
      containers:
        - name: grafana
          image: grafana/grafana-oss:10.3.1
          imagePullPolicy: Always
          volumeMounts:
            - name: grafana-config
              mountPath: /etc/grafana
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 200Mi
              cpu: 150m
            limits:
              memory: 200Mi
              cpu: 200m
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "grafana.santelos.com"
    secretName: grafana-santelos-cert
  rules:
  - host: grafana.santelos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
